--- a/ai-arena.game.config.json
+++ b/ai-arena.game.config.json
@@ -8,5 +8,8 @@
     "max": 4
   },
   "mapsFolderPath": "./maps",
-  "package-server": "cp ./ai-arena.server.config.json ./ai-arena.config.json && zip bomberman-server server/* common/* CMakeLists.txt ai-arena.config.json && rm ai-arena.config.json"
+  "packageServer": {
+    "command": "cp ./ai-arena.server.config.json ./ai-arena.config.json && zip bomberman-server server/* common/* CMakeLists.txt ai-arena.config.json && rm ai-arena.config.json",
+    "result": "./bomberman-server.zip"
+  }
 }
