Change map config

--- a/ai-arena.game.config.json
+++ b/ai-arena.game.config.json
@@ -7,7 +7,24 @@
     "min": 2,
     "max": 4
   },
-  "mapsFolderPath": "./maps",
+  "maps": [
+    {
+      "name": "map1",
+      "path": "./maps/map1.txt",
+      "playerCount": {
+        "min": 2,
+        "max": 4
+      }
+    },
+    {
+      "name": "map2",
+      "path": "./maps/map2.txt",
+      "playerCount": {
+        "min": 2,
+        "max": 4
+      }
+    }
+  ],
   "packageServer": {
     "command": "cp ./ai-arena.server.config.json ./ai-arena.config.json && zip bomberman-server server/* common/* CMakeLists.txt ai-arena.config.json && rm ai-arena.config.json",
     "result": "./bomberman-server.zip"
