--- a/ai-arena.game.config.json
+++ b/ai-arena.game.config.json
@@ -28,5 +28,6 @@
   "packageServer": {
     "command": "cp ./ai-arena.server.config.json ./ai-arena.config.json && zip bomberman-server server/* common/* CMakeLists.txt ai-arena.config.json && rm ai-arena.config.json",
     "result": "./bomberman-server.zip"
-  }
+  },
+  "disabled": true
 }
