Support multiple description languages

--- a/ai-arena.game.config.json
+++ b/ai-arena.game.config.json
@@ -2,7 +2,9 @@
   "name": "Bomberman",
   "shortDescription": "Place bombs to destroy obstacles and eliminate your opponents. Try not to blow up yourself.",
   "picturePath": "./man-with-bomb.jpg",
-  "fullDescriptionPath": "game-description.md",
+  "fullDescription": {
+    "hu": "game-description-hu.md"
+  },
   "playerCount": {
     "min": 2,
     "max": 4
